# thrml-act

./: README.md  act-challenging-test.py  act-profile-test.py  act-synth-test.py  act.py  main.py  pyproject.toml  run_visualization.py  thrml-act.code-workspace  visualization.py
