[project]
name = "thrml-act"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jax>=0.8.0",
  "jaxlib>=0.8.0",
  "matplotlib>=3.10.7",
  "numpy>=2.3.5",
  "scipy>=1.16.3",
  "thrml>=0.1.3",
]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"] # pycodestyle errors, Pyflakes, isort
ignore = []
